<resources>
    <string name="app_name">CAME</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_visitor">VisitorActivity</string>
    <string name="service_dialog_question">
        Deseas marcar como provisto el servicio %s?
    </string>

    <string name="camera_instruction">Presiona para activar camara</string>
    <string name="search_title">Buscar visitante</string>

    <string name="visitor_name">Name:</string>
    <string name="visitor_last_name">A. Paterno:</string>
    <string name="visitor_second_surename">A. Materno:</string>
    <string name="visitor_location">Location:</string>
    <string name="visitor_country">Pais:</string>
    <string name="visitor_state">Estado:</string>
    <string name="visitor_town">Pueblo:</string>

    <string name="visitor_alias">Alias:</string>
    <string name="visitor_birthdate">F. Nac.:</string>
    <string name="visitor_gender">Genero:</string>
    <string name="visitor_status">Estatus:</string>
    <string name="visitor_ingreso">Ingreso:</string>

    <string name="yes">Si</string>
    <string name="no">No</string>
    <string name="instruction">Instrucciones: </string>

    <string name="visit">Visita</string>
    <string name="historical">Historial</string>
    <string name="profile">Perfil</string>

    <string name="visitor_list_progress">Estamos cargando los visitantes...</string>

</resources>
