<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="horizontal"
            android:paddingBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/visitor_name"
                android:textStyle="bold"
                style="@style/Base.TextAppearance.AppCompat.Small"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/visitor_name"
                android:text="Cristian Colorado Cervantes"
                style="@style/Base.TextAppearance.AppCompat.Small"
                android:layout_weight="3"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:paddingBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/visitor_alias"
                android:textStyle="bold"
                style="@style/Base.TextAppearance.AppCompat.Small"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/visitor_alias"
                android:text="Cris"
                style="@style/Base.TextAppearance.AppCompat.Small"
                android:layout_weight="3"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:paddingBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/visitor_location"
                android:textStyle="bold"
                style="@style/Base.TextAppearance.AppCompat.Small"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/visitor_location"
                android:text="Mexico, San Luis Potosi"
                style="@style/Base.TextAppearance.AppCompat.Small"
                android:layout_weight="3"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:paddingBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/visitor_birthdate"
                android:textStyle="bold"
                style="@style/Base.TextAppearance.AppCompat.Small"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/visitor_birthdate"
                android:text="Abril 1, 1985"
                style="@style/Base.TextAppearance.AppCompat.Small"
                android:layout_weight="3"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:paddingBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/visitor_gender"
                android:textStyle="bold"
                style="@style/Base.TextAppearance.AppCompat.Small"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/visitor_gender"
                android:text="Hombre"
                style="@style/Base.TextAppearance.AppCompat.Small"
                android:layout_weight="3"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:paddingBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/visitor_status"
                android:textStyle="bold"
                style="@style/Base.TextAppearance.AppCompat.Small"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/visitor_status"
                android:text="Migrante"
                style="@style/Base.TextAppearance.AppCompat.Small"
                android:layout_weight="3"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:paddingBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/visitor_ingreso"
                android:textStyle="bold"
                style="@style/Base.TextAppearance.AppCompat.Small"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/visitor_checkin"
                android:text="Diciembre 1, 2016"
                style="@style/Base.TextAppearance.AppCompat.Small"
                android:layout_weight="3"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:tint="@android:color/white"
        android:src="@android:drawable/ic_menu_edit" />

</android.support.design.widget.CoordinatorLayout>