<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="mx.wedevelop.came.NewVisitorActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/camera_layout"
            android:background="@color/colorPrimary"
            android:padding="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/camera_button"
                android:background="@drawable/circle"
                android:tint="@color/colorPrimary"
                android:src="@drawable/ic_camera_enhance_white_48dp"
                android:layout_centerHorizontal="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:text="@string/camera_instruction"
                style="@style/TextAppearance.AppCompat.Small.Inverse"
                android:paddingTop="10dp"
                android:layout_below="@+id/camera_button"
                android:layout_centerHorizontal="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/picture_layout"
            android:background="@color/colorPrimary"
            android:padding="20dp"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/visitor_picture"
                android:src="@drawable/profile"
                android:layout_centerHorizontal="true"
                android:layout_width="120dp"
                android:layout_height="120dp"/>

        </RelativeLayout>

        <LinearLayout
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/visitor_name"
                    android:textStyle="bold"
                    style="@style/Base.TextAppearance.AppCompat.Small"
                    android:layout_weight="2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />

                <EditText
                    android:id="@+id/visitor_name"
                    android:layout_weight="5"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:nextFocusForward="@+id/visitor_last_name"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/visitor_last_name"
                    android:textStyle="bold"
                    style="@style/Base.TextAppearance.AppCompat.Small"
                    android:layout_weight="2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />

                <EditText
                    android:id="@+id/visitor_last_name"
                    android:layout_weight="5"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:nextFocusForward="@+id/visitor_second_surename"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/visitor_second_surename"
                    android:textStyle="bold"
                    style="@style/Base.TextAppearance.AppCompat.Small"
                    android:layout_weight="2"
                    android:layout_width="0dp"
                    android:singleLine="true"
                    android:layout_height="wrap_content" />

                <EditText
                    android:id="@+id/visitor_second_surename"
                    android:layout_weight="5"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:nextFocusForward="@+id/visitor_alias"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/visitor_alias"
                    android:textStyle="bold"
                    style="@style/Base.TextAppearance.AppCompat.Small"
                    android:layout_weight="2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/visitor_alias"
                    android:layout_weight="5"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:nextFocusForward="@+id/visitor_country"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/visitor_country"
                    android:textStyle="bold"
                    style="@style/Base.TextAppearance.AppCompat.Small"
                    android:layout_weight="2"
                    android:layout_width="0dp"
                    android:singleLine="true"
                    android:layout_height="wrap_content" />

                <EditText
                    android:id="@+id/visitor_country"
                    android:layout_weight="5"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:nextFocusForward="@+id/visitor_state"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/visitor_state"
                    android:textStyle="bold"
                    style="@style/Base.TextAppearance.AppCompat.Small"
                    android:layout_weight="2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />

                <EditText
                    android:id="@+id/visitor_state"
                    android:layout_weight="5"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:nextFocusForward="@+id/visitor_town"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/visitor_town"
                    android:textStyle="bold"
                    style="@style/Base.TextAppearance.AppCompat.Small"
                    android:layout_weight="2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />

                <EditText
                    android:id="@+id/visitor_town"
                    android:layout_weight="5"
                    android:layout_width="0dp"
                    android:singleLine="true"
                    android:layout_height="wrap_content" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        app:layout_anchor="@id/camera_layout"
        app:layout_anchorGravity="right|bottom|end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        android:tint="@android:color/white"
        android:src="@android:drawable/ic_menu_send" />
</android.support.design.widget.CoordinatorLayout>
